@@ -1,0 +1,5 @@
+package org.ginsim.service.tool.localgraph;
+
+public enum LocalGraphCategory {
+	NONFUNCTIONNAL, POSITIVE, NEGATIVE, DUAL;
+}
